# Adventurers-Like-You-Skyrim-Local-Co-op

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  acknowledgements.txt  vcpkg.json
Data/: ALYSLC Enderal.esp  ALYSLC.esp
Data/Interface/: ALYSLC.swf
Data/Interface/Translations/: ALYSLC Enderal_czech.txt  ALYSLC Enderal_english.txt  ALYSLC Enderal_polish.txt  ALYSLC_english.txt  ALYSLC_german.txt  ALYSLC_polish.txt  ALYSLC_russian.txt
Data/MCM/Config/ALYSLC/: settings.ini
Data/MCM/Config/ALYSLC Enderal/: settings.ini
Data/MCM/Settings/: ALYSLC Enderal.ini  ALYSLC.ini
Data/Scripts/: ALYSLC.pex  ALYSLC_API.pex  __ALYSLC_ConfigMenu.pex  __ALYSLC_ControlCOS.pex  __ALYSLC_ControlCoopActor.pex  __ALYSLC_ControlPlayerRef.pex  __ALYSLC_CoopHelperMenuHandler.pex  __ALYSLC_DebugMenu.pex  __ALYSLC_InitializeCoop.pex  __ALYSLC_SummoningMenu.pex
Data/Scripts/Source/: ALYSLC.psc  ALYSLC_API.psc  QF__02003890.psc  QF__0200E5A5.psc  __ALYSLC_ConfigMenu.psc  __ALYSLC_ControlCOS.psc  __ALYSLC_ControlCoopActor.psc  __ALYSLC_ControlPlayerRef.psc  __ALYSLC_CoopHelperMenuHandler.psc  __ALYSLC_DebugMenu.psc  __ALYSLC_InitializeCoop.psc  __ALYSLC_SummoningMenu.psc
include/: ALYSLC_API.h  CameraManager.h  Compatibility.h  Controller.h  DebugAPI.h  Enums.h  EquipManager.h  Events.h  GlobalCoopData.h  Hooks.h  Manager.h  MenuInputManager.h  ModAPI.h  MovementManager.h  PCH.h  Player.h  PlayerActionFunctionsHolder.h  PlayerActionInfoHolder.h  PlayerActionManager.h  PrecisionAPI.h  Proxy.h  Raycast.h  Serialization.h  Settings.h  TargetingManager.h  TrueHUDAPI.h  Util.h
src/: CameraManager.cpp  Compatibility.cpp  Controller.cpp  DebugAPI.cpp  EquipManager.cpp  Events.cpp  GlobalCoopData.cpp  Hooks.cpp  MenuInputManager.cpp  ModAPI.cpp  MovementManager.cpp  Player.cpp  PlayerActionFunctionsHolder.cpp  PlayerActionInfoHolder.cpp  PlayerActionManager.cpp  Proxy.cpp  Raycast.cpp  Serialization.cpp  Settings.cpp  TargetingManager.cpp  Util.cpp  main.cpp
